corect in line 40 <p> after nu html checker

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <section id="outpaths">
         <h2>Tu mnie znajdziesz</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde rem, expedita dolorum iste praesentium
-            deserunt vel assumenda voluptatem dolores? Obcaecati.
+            deserunt vel assumenda voluptatem dolores? Obcaecati.</p>
         <p>Dolores? <a href="https://google.com">Link do Google</a></p>
-        </p>
+
     </section>
     <footer>
         <h3>copywright by A.Kowalski</h3>
